ARCHIVED_OLD/check_output.txt
cargo :     Checking popup-bar v0.1.0 
(C:\Users\matth\OneDrive\Dokumente\GitHub\popup-bar\popup-bar\src-tauri)
In Zeile:1 Zeichen:15
+ cd src-tauri; cargo check 2>&1 | Out-File -FilePath ../check_output.t ...
+               ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking po...-bar\src-tauri):String 
   ) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0277]: the trait bound `&&Pool<sqlx::Sqlite>: Executor<'_>` is not satisfied
   --> src\modules\config.rs:100:29
    |
100 |             .fetch_optional(&pool)
    |              -------------- ^^^^^ the trait `Executor<'_>` is not implemented 
for `&&Pool<sqlx::Sqlite>`
    |              |
    |              required by a bound introduced by this call
    |
note: required by a bound in `Query::<'q, DB, A>::fetch_optional`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\query.rs:294:12
    |
290 |     pub async fn fetch_optional<'e, 'c: 'e, E>(self, executor: E) -> 
Result<Option<DB::Row>, Error>
    |                  -------------- required by a bound in this associated function
...
294 |         E: Executor<'c, Database = DB>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Query::<'q, 
DB, A>::fetch_optional`
help: consider dereferencing here
    |
100 |             .fetch_optional(&*pool)
    |                              +
help: consider removing the leading `&`-reference
    |
100 -             .fetch_optional(&pool)
100 +             .fetch_optional(pool)
    |

error[E0277]: the trait bound `&&Pool<sqlx::Sqlite>: Executor<'_>` is not satisfied
   --> src\modules\config.rs:98:19
    |
 98 |           let row = sqlx::query("SELECT value FROM settings WHERE key = ?1")
    |  ___________________^
 99 | |             .bind(SETTINGS_KEY)
100 | |             .fetch_optional(&pool)
    | |__________________________________^ the trait `Executor<'_>` is not 
implemented for `&&Pool<sqlx::Sqlite>`
    |
help: the trait `Executor<'_>` is not implemented for `&&Pool<sqlx::Sqlite>`
      but it is implemented for `&Pool<_>`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\pool\executor.rs:12:1
    |
 12 | / impl<'p, DB: Database> Executor<'p> for &'_ Pool<DB>
 13 | | where
 14 | |     for<'c> &'c mut DB::Connection: Executor<'c, Database = DB>,
    | |________________________________________________________________^
    = help: for that trait implementation, expected `Pool<_>`, found 
`&Pool<sqlx::Sqlite>`
note: required by a bound in `Query::<'q, DB, A>::fetch_optional`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\query.rs:294:12
    |
290 |     pub async fn fetch_optional<'e, 'c: 'e, E>(self, executor: E) -> 
Result<Option<DB::Row>, Error>
    |                  -------------- required by a bound in this associated function
...
294 |         E: Executor<'c, Database = DB>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Query::<'q, 
DB, A>::fetch_optional`

error[E0277]: the trait bound `&&Pool<sqlx::Sqlite>: Executor<'_>` is not satisfied
   --> src\modules\config.rs:101:14
    |
101 |             .await
    |              ^^^^^ the trait `Executor<'_>` is not implemented for 
`&&Pool<sqlx::Sqlite>`
    |
help: the trait `Executor<'_>` is not implemented for `&&Pool<sqlx::Sqlite>`
      but it is implemented for `&Pool<_>`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\pool\executor.rs:12:1
    |
 12 | / impl<'p, DB: Database> Executor<'p> for &'_ Pool<DB>
 13 | | where
 14 | |     for<'c> &'c mut DB::Connection: Executor<'c, Database = DB>,
    | |________________________________________________________________^
    = help: for that trait implementation, expected `Pool<_>`, found 
`&Pool<sqlx::Sqlite>`
note: required by a bound in `Query::<'q, DB, A>::fetch_optional`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\query.rs:294:12
    |
290 |     pub async fn fetch_optional<'e, 'c: 'e, E>(self, executor: E) -> 
Result<Option<DB::Row>, Error>
    |                  -------------- required by a bound in this associated function
...
294 |         E: Executor<'c, Database = DB>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Query::<'q, 
DB, A>::fetch_optional`

error[E0282]: type annotations needed for `std::option::Option<_>`
   --> src\modules\config.rs:98:13
    |
 98 |         let row = sqlx::query("SELECT value FROM settings WHERE key = ?1")
    |             ^^^
...
106 |                 let value: String = r.try_get("value").map_err(|e: sqlx::Error| 
e.to_string())?;
    |                                     - type must be known at this point
    |
help: consider giving `row` an explicit type, where the placeholders `_` are specified
    |
 98 |         let row: std::option::Option<_> = sqlx::query("SELECT value FROM 
settings WHERE key = ?1")
    |                ++++++++++++++++++++++++

error[E0277]: the trait bound `&&Pool<sqlx::Sqlite>: Executor<'_>` is not satisfied
   --> src\modules\config.rs:126:18
    |
126 |         .execute(&pool)
    |          ------- ^^^^^ the trait `Executor<'_>` is not implemented for 
`&&Pool<sqlx::Sqlite>`
    |          |
    |          required by a bound introduced by this call
    |
note: required by a bound in `Query::<'q, DB, A>::execute`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\query.rs:188:12
    |
184 |     pub async fn execute<'e, 'c: 'e, E>(self, executor: E) -> 
Result<DB::QueryResult, Error>
    |                  ------- required by a bound in this associated function
...
188 |         E: Executor<'c, Database = DB>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Query::<'q, 
DB, A>::execute`
help: consider dereferencing here
    |
126 |         .execute(&*pool)
    |                   +
help: consider removing the leading `&`-reference
    |
126 -         .execute(&pool)
126 +         .execute(pool)
    |

error[E0277]: the trait bound `&&Pool<sqlx::Sqlite>: Executor<'_>` is not satisfied
   --> src\modules\config.rs:121:9
    |
121 | /         sqlx::query(
122 | |             "INSERT OR REPLACE INTO settings (key, value, updated_at) VALUES 
(?1, ?2, strftime('%Y-%m-%dT%H:%M:%SZ', 'now'))",
123 | |         )
124 | |         .bind(SETTINGS_KEY)
125 | |         .bind(&value)
126 | |         .execute(&pool)
    | |_______________________^ the trait `Executor<'_>` is not implemented for 
`&&Pool<sqlx::Sqlite>`
    |
help: the trait `Executor<'_>` is not implemented for `&&Pool<sqlx::Sqlite>`
      but it is implemented for `&Pool<_>`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\pool\executor.rs:12:1
    |
 12 | / impl<'p, DB: Database> Executor<'p> for &'_ Pool<DB>
 13 | | where
 14 | |     for<'c> &'c mut DB::Connection: Executor<'c, Database = DB>,
    | |________________________________________________________________^
    = help: for that trait implementation, expected `Pool<_>`, found 
`&Pool<sqlx::Sqlite>`
note: required by a bound in `Query::<'q, DB, A>::execute`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\query.rs:188:12
    |
184 |     pub async fn execute<'e, 'c: 'e, E>(self, executor: E) -> 
Result<DB::QueryResult, Error>
    |                  ------- required by a bound in this associated function
...
188 |         E: Executor<'c, Database = DB>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Query::<'q, 
DB, A>::execute`

error[E0277]: the trait bound `&&Pool<sqlx::Sqlite>: Executor<'_>` is not satisfied
   --> src\modules\config.rs:127:10
    |
127 |         .await
    |          ^^^^^ the trait `Executor<'_>` is not implemented for 
`&&Pool<sqlx::Sqlite>`
    |
help: the trait `Executor<'_>` is not implemented for `&&Pool<sqlx::Sqlite>`
      but it is implemented for `&Pool<_>`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\pool\executor.rs:12:1
    |
 12 | / impl<'p, DB: Database> Executor<'p> for &'_ Pool<DB>
 13 | | where
 14 | |     for<'c> &'c mut DB::Connection: Executor<'c, Database = DB>,
    | |________________________________________________________________^
    = help: for that trait implementation, expected `Pool<_>`, found 
`&Pool<sqlx::Sqlite>`
note: required by a bound in `Query::<'q, DB, A>::execute`
   --> C:\Users\matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0
.8.6\src\query.rs:188:12
    |
184 |     pub async fn execute<'e, 'c: 'e, E>(self, executor: E) -> 
Result<DB::QueryResult, Error>
    |                  ------- required by a bound in this associated function
...
188 |         E: Executor<'c, Database = DB>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Query::<'q, 
DB, A>::execute`

warning: use of deprecated method `tauri_plugin_shell::Shell::<R>::open`: Use 
tauri-plugin-opener instead.
  --> src\modules\launcher.rs:77:14
   |
77 |             .open(path.to_string(), None)
   |              ^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: unused variable: `screen_h`
   --> src\modules\hotzone.rs:171:60
    |
171 |                         let (screen_x, screen_y, screen_w, screen_h) = monitor
    |                                                            ^^^^^^^^ help: if 
this is intentional, prefix it with an underscore: `_screen_h`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0282.
For more information about an error, try `rustc --explain E0277`.
warning: `popup-bar` (lib) generated 2 warnings
error: could not compile `popup-bar` (lib) due to 7 previous errors; 2 warnings 
emitted
